// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The AvatarCloud component should accept a primaryAvatar 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />
  <View
    size={72}
    style={
      Object {
        "backgroundColor": "rgba(142, 142, 147, 0.2)",
        "borderRadius": 36,
        "height": 72,
        "overflow": "hidden",
        "width": 72,
      }
    }
  >
    <View
      leaf={
        Node {
          "data": Object {
            "id": "\\"https://picsum.photos/200\\"",
            "photo": "https://picsum.photos/200",
            "value": 5,
          },
          "depth": 1,
          "height": 0,
          "parent": Node {
            "children": Array [
              [Circular],
              Node {
                "data": Object {
                  "id": "\\"https://picsum.photos/200?1\\"",
                  "photo": "https://picsum.photos/200?1",
                  "value": 3,
                },
                "depth": 1,
                "height": 0,
                "parent": [Circular],
                "r": 12.5709601853868,
                "value": 3,
                "x": 54.62903981461319,
                "y": 36,
              },
              Node {
                "data": Object {
                  "id": "\\"https://picsum.photos/200?2\\"",
                  "photo": "https://picsum.photos/200?2",
                  "value": 1.2,
                },
                "depth": 1,
                "height": 0,
                "parent": [Circular],
                "r": 7.950573312222965,
                "value": 1.2,
                "x": 40.78496121804357,
                "y": 57.20192317886696,
              },
              Node {
                "data": Object {
                  "id": "\\"https://picsum.photos/200?3\\"",
                  "photo": "https://picsum.photos/200?3",
                  "value": 0.36,
                },
                "depth": 1,
                "height": 0,
                "parent": [Circular],
                "r": 4.354708348203083,
                "value": 0.36,
                "x": 40.39347430214089,
                "y": 19.58801207130816,
              },
            ],
            "data": Object {
              "children": Array [
                Object {
                  "id": "\\"https://picsum.photos/200\\"",
                  "photo": "https://picsum.photos/200",
                  "value": 5,
                },
                Object {
                  "id": "\\"https://picsum.photos/200?1\\"",
                  "photo": "https://picsum.photos/200?1",
                  "value": 3,
                },
                Object {
                  "id": "\\"https://picsum.photos/200?2\\"",
                  "photo": "https://picsum.photos/200?2",
                  "value": 1.2,
                },
                Object {
                  "id": "\\"https://picsum.photos/200?3\\"",
                  "photo": "https://picsum.photos/200?3",
                  "value": 0.36,
                },
              ],
            },
            "depth": 0,
            "height": 1,
            "parent": null,
            "r": 36,
            "value": 9.56,
            "x": 36,
            "y": 36,
          },
          "r": 16.229039814613195,
          "value": 5,
          "x": 21.0290398146132,
          "y": 36,
        }
      }
      style={
        Object {
          "left": 4.800000000000004,
          "position": "absolute",
          "top": 19.770960185386805,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "height": 32.45807962922639,
            "justifyContent": "center",
            "width": 32.45807962922639,
          }
        }
        themeSize={32.45807962922639}
      >
        <Image
          fadeDuration={250}
          onLoad={[Function]}
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "https://picsum.photos/200",
                "url": "https://picsum.photos/200",
              },
            ]
          }
          style={
            Object {
              "backgroundColor": "#A5A5A5",
              "borderRadius": 16.229039814613195,
              "bottom": 0,
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": "100%",
            }
          }
          themeSize={32.45807962922639}
        />
      </View>
    </View>
    <View
      leaf={
        Node {
          "data": Object {
            "id": "\\"https://picsum.photos/200?1\\"",
            "photo": "https://picsum.photos/200?1",
            "value": 3,
          },
          "depth": 1,
          "height": 0,
          "parent": Node {
            "children": Array [
              Node {
                "data": Object {
                  "id": "\\"https://picsum.photos/200\\"",
                  "photo": "https://picsum.photos/200",
                  "value": 5,
                },
                "depth": 1,
                "height": 0,
                "parent": [Circular],
                "r": 16.229039814613195,
                "value": 5,
                "x": 21.0290398146132,
                "y": 36,
              },
              [Circular],
              Node {
                "data": Object {
                  "id": "\\"https://picsum.photos/200?2\\"",
                  "photo": "https://picsum.photos/200?2",
                  "value": 1.2,
                },
                "depth": 1,
                "height": 0,
                "parent": [Circular],
                "r": 7.950573312222965,
                "value": 1.2,
                "x": 40.78496121804357,
                "y": 57.20192317886696,
              },
              Node {
                "data": Object {
                  "id": "\\"https://picsum.photos/200?3\\"",
                  "photo": "https://picsum.photos/200?3",
                  "value": 0.36,
                },
                "depth": 1,
                "height": 0,
                "parent": [Circular],
                "r": 4.354708348203083,
                "value": 0.36,
                "x": 40.39347430214089,
                "y": 19.58801207130816,
              },
            ],
            "data": Object {
              "children": Array [
                Object {
                  "id": "\\"https://picsum.photos/200\\"",
                  "photo": "https://picsum.photos/200",
                  "value": 5,
                },
                Object {
                  "id": "\\"https://picsum.photos/200?1\\"",
                  "photo": "https://picsum.photos/200?1",
                  "value": 3,
                },
                Object {
                  "id": "\\"https://picsum.photos/200?2\\"",
                  "photo": "https://picsum.photos/200?2",
                  "value": 1.2,
                },
                Object {
                  "id": "\\"https://picsum.photos/200?3\\"",
                  "photo": "https://picsum.photos/200?3",
                  "value": 0.36,
                },
              ],
            },
            "depth": 0,
            "height": 1,
            "parent": null,
            "r": 36,
            "value": 9.56,
            "x": 36,
            "y": 36,
          },
          "r": 12.5709601853868,
          "value": 3,
          "x": 54.62903981461319,
          "y": 36,
        }
      }
      style={
        Object {
          "left": 42.05807962922639,
          "position": "absolute",
          "top": 23.429039814613198,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "height": 25.1419203707736,
            "justifyContent": "center",
            "width": 25.1419203707736,
          }
        }
        themeSize={25.1419203707736}
      >
        <Image
          fadeDuration={250}
          onLoad={[Function]}
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "https://picsum.photos/200?1",
                "url": "https://picsum.photos/200?1",
              },
            ]
          }
          style={
            Object {
              "backgroundColor": "#A5A5A5",
              "borderRadius": 12.5709601853868,
              "bottom": 0,
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": "100%",
            }
          }
          themeSize={25.1419203707736}
        />
      </View>
    </View>
    <View
      leaf={
        Node {
          "data": Object {
            "id": "\\"https://picsum.photos/200?2\\"",
            "photo": "https://picsum.photos/200?2",
            "value": 1.2,
          },
          "depth": 1,
          "height": 0,
          "parent": Node {
            "children": Array [
              Node {
                "data": Object {
                  "id": "\\"https://picsum.photos/200\\"",
                  "photo": "https://picsum.photos/200",
                  "value": 5,
                },
                "depth": 1,
                "height": 0,
                "parent": [Circular],
                "r": 16.229039814613195,
                "value": 5,
                "x": 21.0290398146132,
                "y": 36,
              },
              Node {
                "data": Object {
                  "id": "\\"https://picsum.photos/200?1\\"",
                  "photo": "https://picsum.photos/200?1",
                  "value": 3,
                },
                "depth": 1,
                "height": 0,
                "parent": [Circular],
                "r": 12.5709601853868,
                "value": 3,
                "x": 54.62903981461319,
                "y": 36,
              },
              [Circular],
              Node {
                "data": Object {
                  "id": "\\"https://picsum.photos/200?3\\"",
                  "photo": "https://picsum.photos/200?3",
                  "value": 0.36,
                },
                "depth": 1,
                "height": 0,
                "parent": [Circular],
                "r": 4.354708348203083,
                "value": 0.36,
                "x": 40.39347430214089,
                "y": 19.58801207130816,
              },
            ],
            "data": Object {
              "children": Array [
                Object {
                  "id": "\\"https://picsum.photos/200\\"",
                  "photo": "https://picsum.photos/200",
                  "value": 5,
                },
                Object {
                  "id": "\\"https://picsum.photos/200?1\\"",
                  "photo": "https://picsum.photos/200?1",
                  "value": 3,
                },
                Object {
                  "id": "\\"https://picsum.photos/200?2\\"",
                  "photo": "https://picsum.photos/200?2",
                  "value": 1.2,
                },
                Object {
                  "id": "\\"https://picsum.photos/200?3\\"",
                  "photo": "https://picsum.photos/200?3",
                  "value": 0.36,
                },
              ],
            },
            "depth": 0,
            "height": 1,
            "parent": null,
            "r": 36,
            "value": 9.56,
            "x": 36,
            "y": 36,
          },
          "r": 7.950573312222965,
          "value": 1.2,
          "x": 40.78496121804357,
          "y": 57.20192317886696,
        }
      }
      style={
        Object {
          "left": 32.834387905820606,
          "position": "absolute",
          "top": 49.251349866644,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "height": 15.90114662444593,
            "justifyContent": "center",
            "width": 15.90114662444593,
          }
        }
        themeSize={15.90114662444593}
      >
        <Image
          fadeDuration={250}
          onLoad={[Function]}
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "https://picsum.photos/200?2",
                "url": "https://picsum.photos/200?2",
              },
            ]
          }
          style={
            Object {
              "backgroundColor": "#A5A5A5",
              "borderRadius": 7.950573312222965,
              "bottom": 0,
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": "100%",
            }
          }
          themeSize={15.90114662444593}
        />
      </View>
    </View>
    <View
      leaf={
        Node {
          "data": Object {
            "id": "\\"https://picsum.photos/200?3\\"",
            "photo": "https://picsum.photos/200?3",
            "value": 0.36,
          },
          "depth": 1,
          "height": 0,
          "parent": Node {
            "children": Array [
              Node {
                "data": Object {
                  "id": "\\"https://picsum.photos/200\\"",
                  "photo": "https://picsum.photos/200",
                  "value": 5,
                },
                "depth": 1,
                "height": 0,
                "parent": [Circular],
                "r": 16.229039814613195,
                "value": 5,
                "x": 21.0290398146132,
                "y": 36,
              },
              Node {
                "data": Object {
                  "id": "\\"https://picsum.photos/200?1\\"",
                  "photo": "https://picsum.photos/200?1",
                  "value": 3,
                },
                "depth": 1,
                "height": 0,
                "parent": [Circular],
                "r": 12.5709601853868,
                "value": 3,
                "x": 54.62903981461319,
                "y": 36,
              },
              Node {
                "data": Object {
                  "id": "\\"https://picsum.photos/200?2\\"",
                  "photo": "https://picsum.photos/200?2",
                  "value": 1.2,
                },
                "depth": 1,
                "height": 0,
                "parent": [Circular],
                "r": 7.950573312222965,
                "value": 1.2,
                "x": 40.78496121804357,
                "y": 57.20192317886696,
              },
              [Circular],
            ],
            "data": Object {
              "children": Array [
                Object {
                  "id": "\\"https://picsum.photos/200\\"",
                  "photo": "https://picsum.photos/200",
                  "value": 5,
                },
                Object {
                  "id": "\\"https://picsum.photos/200?1\\"",
                  "photo": "https://picsum.photos/200?1",
                  "value": 3,
                },
                Object {
                  "id": "\\"https://picsum.photos/200?2\\"",
                  "photo": "https://picsum.photos/200?2",
                  "value": 1.2,
                },
                Object {
                  "id": "\\"https://picsum.photos/200?3\\"",
                  "photo": "https://picsum.photos/200?3",
                  "value": 0.36,
                },
              ],
            },
            "depth": 0,
            "height": 1,
            "parent": null,
            "r": 36,
            "value": 9.56,
            "x": 36,
            "y": 36,
          },
          "r": 4.354708348203083,
          "value": 0.36,
          "x": 40.39347430214089,
          "y": 19.58801207130816,
        }
      }
      style={
        Object {
          "left": 36.038765953937805,
          "position": "absolute",
          "top": 15.233303723105077,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "height": 8.709416696406166,
            "justifyContent": "center",
            "width": 8.709416696406166,
          }
        }
        themeSize={8.709416696406166}
      >
        <Image
          fadeDuration={250}
          onLoad={[Function]}
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "https://picsum.photos/200?3",
                "url": "https://picsum.photos/200?3",
              },
            ]
          }
          style={
            Object {
              "backgroundColor": "#A5A5A5",
              "borderRadius": 4.354708348203083,
              "bottom": 0,
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": "100%",
            }
          }
          themeSize={8.709416696406166}
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`The AvatarCloud component should render 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />
  <View
    size={72}
    style={
      Object {
        "backgroundColor": "rgba(142, 142, 147, 0.2)",
        "borderRadius": 36,
        "height": 72,
        "overflow": "hidden",
        "width": 72,
      }
    }
  >
    <View
      leaf={
        Node {
          "data": Object {
            "id": "\\"https://picsum.photos/200?1\\"",
            "photo": "https://picsum.photos/200?1",
            "value": 3,
          },
          "depth": 1,
          "height": 0,
          "parent": Node {
            "children": Array [
              [Circular],
              Node {
                "data": Object {
                  "id": "\\"https://picsum.photos/200?2\\"",
                  "photo": "https://picsum.photos/200?2",
                  "value": 1.2,
                },
                "depth": 1,
                "height": 0,
                "parent": [Circular],
                "r": 11.157865537616441,
                "value": 1.2,
                "x": 56.04213446238356,
                "y": 36,
              },
              Node {
                "data": Object {
                  "id": "\\"https://picsum.photos/200?3\\"",
                  "photo": "https://picsum.photos/200?3",
                  "value": 0.36,
                },
                "depth": 1,
                "height": 0,
                "parent": [Circular],
                "r": 6.111414648562032,
                "value": 0.36,
                "x": 44.126837422132546,
                "y": 54.5762973807655,
              },
            ],
            "data": Object {
              "children": Array [
                Object {
                  "id": "\\"https://picsum.photos/200?1\\"",
                  "photo": "https://picsum.photos/200?1",
                  "value": 3,
                },
                Object {
                  "id": "\\"https://picsum.photos/200?2\\"",
                  "photo": "https://picsum.photos/200?2",
                  "value": 1.2,
                },
                Object {
                  "id": "\\"https://picsum.photos/200?3\\"",
                  "photo": "https://picsum.photos/200?3",
                  "value": 0.36,
                },
              ],
            },
            "depth": 0,
            "height": 1,
            "parent": null,
            "r": 36,
            "value": 4.5600000000000005,
            "x": 36,
            "y": 36,
          },
          "r": 17.642134462383556,
          "value": 3,
          "x": 22.44213446238356,
          "y": 36,
        }
      }
      style={
        Object {
          "left": 4.800000000000004,
          "position": "absolute",
          "top": 18.357865537616444,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "height": 35.28426892476711,
            "justifyContent": "center",
            "width": 35.28426892476711,
          }
        }
        themeSize={35.28426892476711}
      >
        <Image
          fadeDuration={250}
          onLoad={[Function]}
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "https://picsum.photos/200?1",
                "url": "https://picsum.photos/200?1",
              },
            ]
          }
          style={
            Object {
              "backgroundColor": "#A5A5A5",
              "borderRadius": 17.642134462383556,
              "bottom": 0,
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": "100%",
            }
          }
          themeSize={35.28426892476711}
        />
      </View>
    </View>
    <View
      leaf={
        Node {
          "data": Object {
            "id": "\\"https://picsum.photos/200?2\\"",
            "photo": "https://picsum.photos/200?2",
            "value": 1.2,
          },
          "depth": 1,
          "height": 0,
          "parent": Node {
            "children": Array [
              Node {
                "data": Object {
                  "id": "\\"https://picsum.photos/200?1\\"",
                  "photo": "https://picsum.photos/200?1",
                  "value": 3,
                },
                "depth": 1,
                "height": 0,
                "parent": [Circular],
                "r": 17.642134462383556,
                "value": 3,
                "x": 22.44213446238356,
                "y": 36,
              },
              [Circular],
              Node {
                "data": Object {
                  "id": "\\"https://picsum.photos/200?3\\"",
                  "photo": "https://picsum.photos/200?3",
                  "value": 0.36,
                },
                "depth": 1,
                "height": 0,
                "parent": [Circular],
                "r": 6.111414648562032,
                "value": 0.36,
                "x": 44.126837422132546,
                "y": 54.5762973807655,
              },
            ],
            "data": Object {
              "children": Array [
                Object {
                  "id": "\\"https://picsum.photos/200?1\\"",
                  "photo": "https://picsum.photos/200?1",
                  "value": 3,
                },
                Object {
                  "id": "\\"https://picsum.photos/200?2\\"",
                  "photo": "https://picsum.photos/200?2",
                  "value": 1.2,
                },
                Object {
                  "id": "\\"https://picsum.photos/200?3\\"",
                  "photo": "https://picsum.photos/200?3",
                  "value": 0.36,
                },
              ],
            },
            "depth": 0,
            "height": 1,
            "parent": null,
            "r": 36,
            "value": 4.5600000000000005,
            "x": 36,
            "y": 36,
          },
          "r": 11.157865537616441,
          "value": 1.2,
          "x": 56.04213446238356,
          "y": 36,
        }
      }
      style={
        Object {
          "left": 44.88426892476711,
          "position": "absolute",
          "top": 24.84213446238356,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "height": 22.315731075232883,
            "justifyContent": "center",
            "width": 22.315731075232883,
          }
        }
        themeSize={22.315731075232883}
      >
        <Image
          fadeDuration={250}
          onLoad={[Function]}
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "https://picsum.photos/200?2",
                "url": "https://picsum.photos/200?2",
              },
            ]
          }
          style={
            Object {
              "backgroundColor": "#A5A5A5",
              "borderRadius": 11.157865537616441,
              "bottom": 0,
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": "100%",
            }
          }
          themeSize={22.315731075232883}
        />
      </View>
    </View>
    <View
      leaf={
        Node {
          "data": Object {
            "id": "\\"https://picsum.photos/200?3\\"",
            "photo": "https://picsum.photos/200?3",
            "value": 0.36,
          },
          "depth": 1,
          "height": 0,
          "parent": Node {
            "children": Array [
              Node {
                "data": Object {
                  "id": "\\"https://picsum.photos/200?1\\"",
                  "photo": "https://picsum.photos/200?1",
                  "value": 3,
                },
                "depth": 1,
                "height": 0,
                "parent": [Circular],
                "r": 17.642134462383556,
                "value": 3,
                "x": 22.44213446238356,
                "y": 36,
              },
              Node {
                "data": Object {
                  "id": "\\"https://picsum.photos/200?2\\"",
                  "photo": "https://picsum.photos/200?2",
                  "value": 1.2,
                },
                "depth": 1,
                "height": 0,
                "parent": [Circular],
                "r": 11.157865537616441,
                "value": 1.2,
                "x": 56.04213446238356,
                "y": 36,
              },
              [Circular],
            ],
            "data": Object {
              "children": Array [
                Object {
                  "id": "\\"https://picsum.photos/200?1\\"",
                  "photo": "https://picsum.photos/200?1",
                  "value": 3,
                },
                Object {
                  "id": "\\"https://picsum.photos/200?2\\"",
                  "photo": "https://picsum.photos/200?2",
                  "value": 1.2,
                },
                Object {
                  "id": "\\"https://picsum.photos/200?3\\"",
                  "photo": "https://picsum.photos/200?3",
                  "value": 0.36,
                },
              ],
            },
            "depth": 0,
            "height": 1,
            "parent": null,
            "r": 36,
            "value": 4.5600000000000005,
            "x": 36,
            "y": 36,
          },
          "r": 6.111414648562032,
          "value": 0.36,
          "x": 44.126837422132546,
          "y": 54.5762973807655,
        }
      }
      style={
        Object {
          "left": 38.01542277357051,
          "position": "absolute",
          "top": 48.46488273220347,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "height": 12.222829297124065,
            "justifyContent": "center",
            "width": 12.222829297124065,
          }
        }
        themeSize={12.222829297124065}
      >
        <Image
          fadeDuration={250}
          onLoad={[Function]}
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "https://picsum.photos/200?3",
                "url": "https://picsum.photos/200?3",
              },
            ]
          }
          style={
            Object {
              "backgroundColor": "#A5A5A5",
              "borderRadius": 6.111414648562032,
              "bottom": 0,
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": "100%",
            }
          }
          themeSize={12.222829297124065}
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`The AvatarCloud component should render as isLoading 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />
  <View
    isLoading={true}
    size={72}
    style={
      Object {
        "backgroundColor": "rgba(142, 142, 147, 0.2)",
        "borderRadius": 36,
        "height": 72,
        "overflow": "hidden",
        "width": 72,
      }
    }
  >
    <View
      leaf={
        Node {
          "data": Object {
            "id": "\\"\\"",
            "photo": "",
            "value": 3,
          },
          "depth": 1,
          "height": 0,
          "parent": Node {
            "children": Array [
              [Circular],
              Node {
                "data": Object {
                  "id": "\\"\\"",
                  "photo": "",
                  "value": 1.2,
                },
                "depth": 1,
                "height": 0,
                "parent": [Circular],
                "r": 11.157865537616441,
                "value": 1.2,
                "x": 56.04213446238356,
                "y": 36,
              },
              Node {
                "data": Object {
                  "id": "\\"\\"",
                  "photo": "",
                  "value": 0.36,
                },
                "depth": 1,
                "height": 0,
                "parent": [Circular],
                "r": 6.111414648562032,
                "value": 0.36,
                "x": 44.126837422132546,
                "y": 54.5762973807655,
              },
            ],
            "data": Object {
              "children": Array [
                Object {
                  "id": "\\"\\"",
                  "photo": "",
                  "value": 3,
                },
                Object {
                  "id": "\\"\\"",
                  "photo": "",
                  "value": 1.2,
                },
                Object {
                  "id": "\\"\\"",
                  "photo": "",
                  "value": 0.36,
                },
              ],
            },
            "depth": 0,
            "height": 1,
            "parent": null,
            "r": 36,
            "value": 4.5600000000000005,
            "x": 36,
            "y": 36,
          },
          "r": 17.642134462383556,
          "value": 3,
          "x": 22.44213446238356,
          "y": 36,
        }
      }
      style={
        Object {
          "left": 4.800000000000004,
          "position": "absolute",
          "top": 18.357865537616444,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "height": 35.28426892476711,
            "justifyContent": "center",
            "width": 35.28426892476711,
          }
        }
        themeSize={35.28426892476711}
      >
        <View
          backgroundColor={null}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "rgba(142, 142, 147, 0.2)",
              "borderRadius": 35.28426892476711,
              "height": 35.28426892476711,
              "justifyContent": "center",
              "width": 35.28426892476711,
            }
          }
          themeSize={35.28426892476711}
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={17.642134462383556}
            bbWidth={17.642134462383556}
            color="rgba(39, 39, 46, 0.3)"
            height={17.642134462383556}
            id="Raw"
            meetOrSlice={0}
            minX={0}
            minY={0}
            size={17.642134462383556}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {},
                null,
                Object {
                  "flex": 0,
                  "height": 17,
                  "width": 17,
                },
              ]
            }
            tintColor="rgba(39, 39, 46, 0.3)"
            vbHeight={256}
            vbWidth={256}
            width={17.642134462383556}
          >
            <RNSVGGroup
              fill={
                Array [
                  0,
                  4278190080,
                ]
              }
              fillOpacity={1}
              fillRule={1}
              font={Object {}}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={Array []}
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              x={0}
              y={0}
            >
              <RNSVGRect
                fill={null}
                fillOpacity={1}
                fillRule={1}
                height={256}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                opacity={1}
                originX={0}
                originY={0}
                propList={
                  Array [
                    "fill",
                  ]
                }
                rotation={0}
                rx={0}
                ry={0}
                scaleX={1}
                scaleY={1}
                skewX={0}
                skewY={0}
                stroke={null}
                strokeDasharray={null}
                strokeDashoffset={null}
                strokeLinecap={0}
                strokeLinejoin={0}
                strokeMiterlimit={4}
                strokeOpacity={1}
                strokeWidth={1}
                vectorEffect={0}
                width={256}
                x={0}
                y={0}
              />
              <RNSVGCircle
                cx={128}
                cy={96}
                fill={null}
                fillOpacity={1}
                fillRule={1}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                opacity={1}
                originX={0}
                originY={0}
                propList={
                  Array [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeMiterlimit",
                  ]
                }
                r={64}
                rotation={0}
                scaleX={1}
                scaleY={1}
                skewX={0}
                skewY={0}
                stroke={
                  Array [
                    0,
                    1294411566,
                  ]
                }
                strokeDasharray={null}
                strokeDashoffset={null}
                strokeLinecap={0}
                strokeLinejoin={0}
                strokeMiterlimit={10}
                strokeOpacity={1}
                strokeWidth={16}
                vectorEffect={0}
                x={0}
                y={0}
              />
              <RNSVGPath
                d="M30.989,215.99064a112.03731,112.03731,0,0,1,194.02311.002"
                fill={null}
                fillOpacity={1}
                fillRule={1}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                opacity={1}
                originX={0}
                originY={0}
                propList={
                  Array [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                rotation={0}
                scaleX={1}
                scaleY={1}
                skewX={0}
                skewY={0}
                stroke={
                  Array [
                    0,
                    1294411566,
                  ]
                }
                strokeDasharray={null}
                strokeDashoffset={null}
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeMiterlimit={4}
                strokeOpacity={1}
                strokeWidth={16}
                vectorEffect={0}
                x={0}
                y={0}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
      </View>
    </View>
    <View
      leaf={
        Node {
          "data": Object {
            "id": "\\"\\"",
            "photo": "",
            "value": 1.2,
          },
          "depth": 1,
          "height": 0,
          "parent": Node {
            "children": Array [
              Node {
                "data": Object {
                  "id": "\\"\\"",
                  "photo": "",
                  "value": 3,
                },
                "depth": 1,
                "height": 0,
                "parent": [Circular],
                "r": 17.642134462383556,
                "value": 3,
                "x": 22.44213446238356,
                "y": 36,
              },
              [Circular],
              Node {
                "data": Object {
                  "id": "\\"\\"",
                  "photo": "",
                  "value": 0.36,
                },
                "depth": 1,
                "height": 0,
                "parent": [Circular],
                "r": 6.111414648562032,
                "value": 0.36,
                "x": 44.126837422132546,
                "y": 54.5762973807655,
              },
            ],
            "data": Object {
              "children": Array [
                Object {
                  "id": "\\"\\"",
                  "photo": "",
                  "value": 3,
                },
                Object {
                  "id": "\\"\\"",
                  "photo": "",
                  "value": 1.2,
                },
                Object {
                  "id": "\\"\\"",
                  "photo": "",
                  "value": 0.36,
                },
              ],
            },
            "depth": 0,
            "height": 1,
            "parent": null,
            "r": 36,
            "value": 4.5600000000000005,
            "x": 36,
            "y": 36,
          },
          "r": 11.157865537616441,
          "value": 1.2,
          "x": 56.04213446238356,
          "y": 36,
        }
      }
      style={
        Object {
          "left": 44.88426892476711,
          "position": "absolute",
          "top": 24.84213446238356,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "height": 22.315731075232883,
            "justifyContent": "center",
            "width": 22.315731075232883,
          }
        }
        themeSize={22.315731075232883}
      >
        <View
          backgroundColor={null}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "rgba(142, 142, 147, 0.2)",
              "borderRadius": 22.315731075232883,
              "height": 22.315731075232883,
              "justifyContent": "center",
              "width": 22.315731075232883,
            }
          }
          themeSize={22.315731075232883}
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={11.157865537616441}
            bbWidth={11.157865537616441}
            color="rgba(39, 39, 46, 0.3)"
            height={11.157865537616441}
            id="Raw"
            meetOrSlice={0}
            minX={0}
            minY={0}
            size={11.157865537616441}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {},
                null,
                Object {
                  "flex": 0,
                  "height": 11,
                  "width": 11,
                },
              ]
            }
            tintColor="rgba(39, 39, 46, 0.3)"
            vbHeight={256}
            vbWidth={256}
            width={11.157865537616441}
          >
            <RNSVGGroup
              fill={
                Array [
                  0,
                  4278190080,
                ]
              }
              fillOpacity={1}
              fillRule={1}
              font={Object {}}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={Array []}
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              x={0}
              y={0}
            >
              <RNSVGRect
                fill={null}
                fillOpacity={1}
                fillRule={1}
                height={256}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                opacity={1}
                originX={0}
                originY={0}
                propList={
                  Array [
                    "fill",
                  ]
                }
                rotation={0}
                rx={0}
                ry={0}
                scaleX={1}
                scaleY={1}
                skewX={0}
                skewY={0}
                stroke={null}
                strokeDasharray={null}
                strokeDashoffset={null}
                strokeLinecap={0}
                strokeLinejoin={0}
                strokeMiterlimit={4}
                strokeOpacity={1}
                strokeWidth={1}
                vectorEffect={0}
                width={256}
                x={0}
                y={0}
              />
              <RNSVGCircle
                cx={128}
                cy={96}
                fill={null}
                fillOpacity={1}
                fillRule={1}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                opacity={1}
                originX={0}
                originY={0}
                propList={
                  Array [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeMiterlimit",
                  ]
                }
                r={64}
                rotation={0}
                scaleX={1}
                scaleY={1}
                skewX={0}
                skewY={0}
                stroke={
                  Array [
                    0,
                    1294411566,
                  ]
                }
                strokeDasharray={null}
                strokeDashoffset={null}
                strokeLinecap={0}
                strokeLinejoin={0}
                strokeMiterlimit={10}
                strokeOpacity={1}
                strokeWidth={16}
                vectorEffect={0}
                x={0}
                y={0}
              />
              <RNSVGPath
                d="M30.989,215.99064a112.03731,112.03731,0,0,1,194.02311.002"
                fill={null}
                fillOpacity={1}
                fillRule={1}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                opacity={1}
                originX={0}
                originY={0}
                propList={
                  Array [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                rotation={0}
                scaleX={1}
                scaleY={1}
                skewX={0}
                skewY={0}
                stroke={
                  Array [
                    0,
                    1294411566,
                  ]
                }
                strokeDasharray={null}
                strokeDashoffset={null}
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeMiterlimit={4}
                strokeOpacity={1}
                strokeWidth={16}
                vectorEffect={0}
                x={0}
                y={0}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
      </View>
    </View>
    <View
      leaf={
        Node {
          "data": Object {
            "id": "\\"\\"",
            "photo": "",
            "value": 0.36,
          },
          "depth": 1,
          "height": 0,
          "parent": Node {
            "children": Array [
              Node {
                "data": Object {
                  "id": "\\"\\"",
                  "photo": "",
                  "value": 3,
                },
                "depth": 1,
                "height": 0,
                "parent": [Circular],
                "r": 17.642134462383556,
                "value": 3,
                "x": 22.44213446238356,
                "y": 36,
              },
              Node {
                "data": Object {
                  "id": "\\"\\"",
                  "photo": "",
                  "value": 1.2,
                },
                "depth": 1,
                "height": 0,
                "parent": [Circular],
                "r": 11.157865537616441,
                "value": 1.2,
                "x": 56.04213446238356,
                "y": 36,
              },
              [Circular],
            ],
            "data": Object {
              "children": Array [
                Object {
                  "id": "\\"\\"",
                  "photo": "",
                  "value": 3,
                },
                Object {
                  "id": "\\"\\"",
                  "photo": "",
                  "value": 1.2,
                },
                Object {
                  "id": "\\"\\"",
                  "photo": "",
                  "value": 0.36,
                },
              ],
            },
            "depth": 0,
            "height": 1,
            "parent": null,
            "r": 36,
            "value": 4.5600000000000005,
            "x": 36,
            "y": 36,
          },
          "r": 6.111414648562032,
          "value": 0.36,
          "x": 44.126837422132546,
          "y": 54.5762973807655,
        }
      }
      style={
        Object {
          "left": 38.01542277357051,
          "position": "absolute",
          "top": 48.46488273220347,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "height": 12.222829297124065,
            "justifyContent": "center",
            "width": 12.222829297124065,
          }
        }
        themeSize={12.222829297124065}
      >
        <View
          backgroundColor={null}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "rgba(142, 142, 147, 0.2)",
              "borderRadius": 12.222829297124065,
              "height": 12.222829297124065,
              "justifyContent": "center",
              "width": 12.222829297124065,
            }
          }
          themeSize={12.222829297124065}
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={6.111414648562032}
            bbWidth={6.111414648562032}
            color="rgba(39, 39, 46, 0.3)"
            height={6.111414648562032}
            id="Raw"
            meetOrSlice={0}
            minX={0}
            minY={0}
            size={6.111414648562032}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {},
                null,
                Object {
                  "flex": 0,
                  "height": 6,
                  "width": 6,
                },
              ]
            }
            tintColor="rgba(39, 39, 46, 0.3)"
            vbHeight={256}
            vbWidth={256}
            width={6.111414648562032}
          >
            <RNSVGGroup
              fill={
                Array [
                  0,
                  4278190080,
                ]
              }
              fillOpacity={1}
              fillRule={1}
              font={Object {}}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={Array []}
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              x={0}
              y={0}
            >
              <RNSVGRect
                fill={null}
                fillOpacity={1}
                fillRule={1}
                height={256}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                opacity={1}
                originX={0}
                originY={0}
                propList={
                  Array [
                    "fill",
                  ]
                }
                rotation={0}
                rx={0}
                ry={0}
                scaleX={1}
                scaleY={1}
                skewX={0}
                skewY={0}
                stroke={null}
                strokeDasharray={null}
                strokeDashoffset={null}
                strokeLinecap={0}
                strokeLinejoin={0}
                strokeMiterlimit={4}
                strokeOpacity={1}
                strokeWidth={1}
                vectorEffect={0}
                width={256}
                x={0}
                y={0}
              />
              <RNSVGCircle
                cx={128}
                cy={96}
                fill={null}
                fillOpacity={1}
                fillRule={1}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                opacity={1}
                originX={0}
                originY={0}
                propList={
                  Array [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeMiterlimit",
                  ]
                }
                r={64}
                rotation={0}
                scaleX={1}
                scaleY={1}
                skewX={0}
                skewY={0}
                stroke={
                  Array [
                    0,
                    1294411566,
                  ]
                }
                strokeDasharray={null}
                strokeDashoffset={null}
                strokeLinecap={0}
                strokeLinejoin={0}
                strokeMiterlimit={10}
                strokeOpacity={1}
                strokeWidth={16}
                vectorEffect={0}
                x={0}
                y={0}
              />
              <RNSVGPath
                d="M30.989,215.99064a112.03731,112.03731,0,0,1,194.02311.002"
                fill={null}
                fillOpacity={1}
                fillRule={1}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                opacity={1}
                originX={0}
                originY={0}
                propList={
                  Array [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                rotation={0}
                scaleX={1}
                scaleY={1}
                skewX={0}
                skewY={0}
                stroke={
                  Array [
                    0,
                    1294411566,
                  ]
                }
                strokeDasharray={null}
                strokeDashoffset={null}
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeMiterlimit={4}
                strokeOpacity={1}
                strokeWidth={16}
                vectorEffect={0}
                x={0}
                y={0}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
      </View>
    </View>
  </View>
</View>
`;
